--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,76 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/white">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.qmuiteam.qmui.widget.QMUITopBarLayout
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        app:qmui_topbar_left_back_drawable_id="@mipmap/back"
-        app:qmui_topbar_title_gravity="left_center"
-        />
-    <TextView
-        android:id="@+id/tv_exit"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:textSize="@dimen/dp14"
-        android:textColor="@color/black"
-        android:text="登出"
-        android:gravity="center"
-        android:layout_alignParentRight="true"
-        />
+    <data>
 
-    <View
-        android:layout_below="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/line"
-        android:background="@color/line"/>
+    </data>
 
-    <FrameLayout
-        android:id="@+id/fragment"
-        android:layout_below="@+id/toolbar"
-        android:layout_above="@+id/rg_bottom"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/white">
 
-    <RadioGroup
-        android:id="@+id/rg_bottom"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="horizontal"
-        android:checkedButton="@id/rb_pallet"
-        android:layout_alignParentBottom="true"
-        >
-        <RadioButton
-            android:id="@+id/rb_pallet"
+        <com.qmuiteam.qmui.widget.QMUITopBarLayout
+            android:id="@+id/topBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:gravity="center"
+            android:layout_height="48dp"
+            app:qmui_topbar_left_back_drawable_id="@mipmap/back"
+            app:qmui_topbar_title_gravity="left_center" />
+
+        <TextView
+            android:id="@+id/tv_exit"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:textSize="@dimen/dp14"
-            android:background="@drawable/radiobutton_bg"
-            android:textColor="@drawable/textcolor_bg"
-            android:text="有托盘"
-            />
-        <RadioButton
-            android:id="@+id/rb_un_pallet"
+            android:textColor="@color/black"
+            android:text="登出"
+            android:gravity="center"
+            android:layout_alignParentRight="true" />
+
+        <View
+            android:layout_below="@+id/topBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:gravity="center"
-            android:textSize="@dimen/dp14"
-            android:background="@drawable/radiobutton_bg"
-            android:textColor="@drawable/textcolor_bg"
-            android:text="无托盘"
-            />
-    </RadioGroup>
-</RelativeLayout>
+            android:layout_height="@dimen/line"
+            android:background="@color/line" />
+
+        <FrameLayout
+            android:id="@+id/fragment"
+            android:layout_below="@+id/topBar"
+            android:layout_above="@+id/rg_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <RadioGroup
+            android:id="@+id/rg_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:checkedButton="@id/rb_pallet"
+            android:layout_alignParentBottom="true">
+
+            <RadioButton
+                android:id="@+id/rb_pallet"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:button="@null"
+                android:gravity="center"
+                android:textSize="@dimen/dp14"
+                android:background="@drawable/radiobutton_bg"
+                android:textColor="@drawable/textcolor_bg"
+                android:text="有托盘" />
+
+            <RadioButton
+                android:id="@+id/rb_un_pallet"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:button="@null"
+                android:gravity="center"
+                android:textSize="@dimen/dp14"
+                android:background="@drawable/radiobutton_bg"
+                android:textColor="@drawable/textcolor_bg"
+                android:text="无托盘" />
+        </RadioGroup>
+    </RelativeLayout>
+</layout>
