--- a/app/src/main/res/layout/config_server_view.xml
+++ b/app/src/main/res/layout/config_server_view.xml
@@ -14,8 +14,8 @@
         android:gravity="center_vertical"
         android:paddingStart="10dp"
         android:textSize="@dimen/dp14"
-        android:textColorHint="@color/black"
-        android:background="@drawable/qmui_edittext_bg_border_bottom"
+        android:textColor="@color/black"
+        android:background="@drawable/qmui_divider_bottom_bitmap"
         />
     <EditText
         android:id="@+id/editServer"
@@ -75,6 +75,7 @@
         android:text="确定"
         android:gravity="center"
         android:textSize="@dimen/dp14"
+        android:textColor="@color/grey5"
         android:background="@drawable/item_bg"
         />
     <TextView
@@ -87,6 +88,7 @@
         android:text="取消"
         android:gravity="center"
         android:textSize="@dimen/dp14"
+        android:textColor="@color/grey5"
         android:background="@drawable/item_bg"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
