--- a/app/src/main/res/layout/delivery_view.xml
+++ b/app/src/main/res/layout/delivery_view.xml
@@ -1,166 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@color/white"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="发运"
-            android:gravity="center_vertical"
-            android:textSize="@dimen/dp16"
-            android:textColor="@color/black"
-            />
-    </androidx.appcompat.widget.Toolbar>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/line"
-        android:background="@color/line"/>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_margin="10dp"
-        >
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="托盘"
-            android:textColor="@color/grey5"
-            android:textSize="@dimen/dp14"
-            android:gravity="center"
-            />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/tray_no"
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="48dp"-->
+<!--            android:background="@color/white">-->
+
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:text="发运"-->
+<!--                android:gravity="center_vertical"-->
+<!--                android:textSize="@dimen/dp16"-->
+<!--                android:textColor="@color/black" />-->
+<!--        </androidx.appcompat.widget.Toolbar>-->
+        <com.qmuiteam.qmui.widget.QMUITopBarLayout
+            android:id="@+id/topBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/text_bg"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:textSize="@dimen/dp12"
-            android:textColor="@color/grey5"
-            android:textColorHint="@color/greyc"
-            android:hint="扫描托盘条码"
-            android:imeOptions="actionSearch"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/ln_logisticType"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_margin="10dp"
-        android:orientation="horizontal"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="物流公司"
-            android:textColor="@color/grey5"
-            android:textSize="@dimen/dp14"
-            android:gravity="center"
+            android:layout_height="48dp"
             />
 
-        <EditText
-            android:id="@+id/logistics_type"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/text_bg"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:textSize="@dimen/dp12"
-            android:textColor="@color/grey5"
-            android:textColorHint="@color/greyc"
-            android:hint="选择物流公司"
-            android:imeOptions="actionSearch"
-            />
-        <ImageView
-            android:id="@+id/logistics_img"
-            android:layout_width="30dp"
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line"
+            android:background="@color/line" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:scaleType="center"
-            android:padding="5dp"
-            android:background="@drawable/item_bg"
-            android:src="@mipmap/logistics"
-            android:gravity="center"
-            android:textSize="@dimen/dp14"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/ln_logistic_no"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_margin="10dp"
-        android:orientation="horizontal"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="物流单号"
-            android:textColor="@color/grey5"
-            android:textSize="@dimen/dp14"
-            android:gravity="center"
-            />
+            android:layout_margin="10dp">
 
-        <EditText
-            android:id="@+id/logistics_no"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/text_bg"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:textSize="@dimen/dp12"
-            android:textColor="@color/grey5"
-            android:textColorHint="@color/greyc"
-            android:hint="扫描物流单号"
-            android:imeOptions="actionSearch"
-            />
+            <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="托盘"
+                android:textColor="@color/grey5"
+                android:textSize="@dimen/dp14"
+                android:gravity="center" />
+
+            <EditText
+                android:id="@+id/tray_no"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/text_bg"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:textSize="@dimen/dp12"
+                android:textColor="@color/grey5"
+                android:textColorHint="@color/greyc"
+                android:hint="扫描托盘条码"
+                android:imeOptions="actionSearch" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ln_logisticType"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="物流公司"
+                android:textColor="@color/grey5"
+                android:textSize="@dimen/dp14"
+                android:gravity="center" />
+
+            <EditText
+                android:id="@+id/logistics_type"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/text_bg"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:textSize="@dimen/dp12"
+                android:textColor="@color/grey5"
+                android:textColorHint="@color/greyc"
+                android:hint="选择物流公司"
+                android:imeOptions="actionSearch" />
+
+            <ImageView
+                android:id="@+id/logistics_img"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:scaleType="center"
+                android:padding="5dp"
+                android:background="@drawable/item_bg"
+                android:src="@mipmap/logistics"
+                android:gravity="center"
+                android:textSize="@dimen/dp14" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ln_logistic_no"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="物流单号"
+                android:textColor="@color/grey5"
+                android:textSize="@dimen/dp14"
+                android:gravity="center" />
+
+            <EditText
+                android:id="@+id/logistics_no"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/text_bg"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:textSize="@dimen/dp12"
+                android:textColor="@color/grey5"
+                android:textColorHint="@color/greyc"
+                android:hint="扫描物流单号"
+                android:imeOptions="actionSearch" />
+        </LinearLayout>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <com.qmuiteam.qmui.widget.QMUIEmptyView
+                android:id="@+id/empty"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:visibility="gone" />
+        </FrameLayout>
+
+        <Button
+            android:id="@+id/btn_delivery"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="发运"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dp16"
+            android:background="@drawable/bind_btn_bg" />
     </LinearLayout>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        >
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
-        <com.qmuiteam.qmui.widget.QMUIEmptyView
-            android:id="@+id/empty"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:visibility="gone"
-            />
-    </FrameLayout>
-    <Button
-        android:id="@+id/btn_delivery"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="发运"
-        android:gravity="center"
-        android:textColor="@color/white"
-        android:textSize="@dimen/dp16"
-        android:background="@drawable/bind_btn_bg"
-        />
-</LinearLayout>
+</layout>
