--- a/app/src/main/res/layout/modify_num_view.xml
+++ b/app/src/main/res/layout/modify_num_view.xml
@@ -1,123 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    >
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:text="出库"
-            android:textSize="@dimen/dp16"
-            android:textColor="@color/black"
-            />
-    </androidx.appcompat.widget.Toolbar>
-    <View
-        android:layout_below="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/line"
-        android:background="@color/line"
-        />
-    <LinearLayout
-        android:id="@+id/ln_delivery_no"
-        android:layout_below="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_margin="10dp"
-        >
-        <TextView
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:text="发货单"
-            android:textColor="@color/grey5"
-            android:textSize="@dimen/dp14"
-            android:gravity="center"
-            />
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
-        <EditText
-            android:id="@+id/delivery_no"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@drawable/text_bg"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:textSize="@dimen/dp12"
-            android:textColor="@color/grey5"
-            android:textColorHint="@color/greyc"
-            android:hint="扫描发货单条码"
-            android:imeOptions="actionSearch"
-            android:layout_marginRight="10dp"
-            />
-    </LinearLayout>
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/toolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="48dp">-->
 
-    <LinearLayout
-        android:id="@+id/ln_title"
-        android:layout_below="@+id/ln_delivery_no"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@color/greyF5"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="物料列表"
-            android:textSize="@dimen/dp16"
-            android:textColor="@color/black"
-            android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            />
-        <Button
-            android:id="@+id/btn_submit"
+<!--            <TextView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:gravity="center_vertical"-->
+<!--                android:text="出库"-->
+<!--                android:textSize="@dimen/dp16"-->
+<!--                android:textColor="@color/black" />-->
+<!--        </androidx.appcompat.widget.Toolbar>-->
+        <com.qmuiteam.qmui.widget.QMUITopBarLayout
+            android:id="@+id/topBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="提交"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:textSize="@dimen/dp16"
-            android:layout_alignParentBottom="true"
-            android:background="@color/transpant"
+            android:layout_height="48dp"
             />
-        <TextView
-            android:id="@+id/refresh"
-            android:layout_width="50dp"
+        <View
+            android:layout_below="@+id/topBar"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line"
+            android:background="@color/line" />
+
+        <LinearLayout
+            android:id="@+id/ln_delivery_no"
+            android:layout_below="@+id/topBar"
+            android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:gravity="center"
-            android:text="刷新"
-            android:textSize="@dimen/dp14"
-            android:textColor="@color/grey5"
-            />
-    </LinearLayout>
-    <View
-        android:layout_below="@+id/ln_title"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/line"
-        android:background="@color/line"/>
-    <com.qmuiteam.qmui.widget.QMUIEmptyView
-        android:id="@+id/empty"
-        android:layout_below="@+id/ln_title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:visibility="gone"
-        />
-    <ListView
-        android:id="@+id/listView"
-        android:layout_below="@+id/ln_title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+            android:layout_margin="10dp">
 
-</RelativeLayout>
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:text="发货单"
+                android:textColor="@color/grey5"
+                android:textSize="@dimen/dp14"
+                android:gravity="center" />
+
+            <EditText
+                android:id="@+id/delivery_no"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/text_bg"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:textSize="@dimen/dp12"
+                android:textColor="@color/grey5"
+                android:textColorHint="@color/greyc"
+                android:hint="扫描发货单条码"
+                android:imeOptions="actionSearch"
+                android:layout_marginRight="10dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ln_title"
+            android:layout_below="@+id/ln_delivery_no"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="@color/greyF5"
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="物料列表"
+                android:textSize="@dimen/dp16"
+                android:textColor="@color/black"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp" />
+
+            <Button
+                android:id="@+id/btn_submit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="提交"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/dp16"
+                android:layout_alignParentBottom="true"
+                android:background="@color/transpant" />
+
+            <TextView
+                android:id="@+id/refresh"
+                android:layout_width="50dp"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:text="刷新"
+                android:textSize="@dimen/dp14"
+                android:textColor="@color/grey5" />
+        </LinearLayout>
+
+        <View
+            android:layout_below="@+id/ln_title"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line"
+            android:background="@color/line" />
+
+        <com.qmuiteam.qmui.widget.QMUIEmptyView
+            android:id="@+id/empty"
+            android:layout_below="@+id/ln_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:visibility="gone" />
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_below="@+id/ln_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </RelativeLayout>
+</layout>
