--- a/app/src/main/res/layout/pallet_material_view.xml
+++ b/app/src/main/res/layout/pallet_material_view.xml
@@ -1,186 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <com.qmuiteam.qmui.widget.QMUITopBarLayout
-        android:id="@+id/topBar"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:qmui_topbar_left_back_drawable_id="@mipmap/back"
-        app:qmui_topbar_title_gravity="left_center"
-        />
-    <LinearLayout
-        android:id="@+id/ln_pallet"
-        app:layout_constraintTop_toBottomOf="@+id/topBar"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_margin="5dp"
-        android:orientation="horizontal"
-        >
-        <TextView
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:text="托盘"
-            android:textColor="@color/grey5"
-            android:textSize="@dimen/dp14"
-            android:gravity="center"
-            />
-        <EditText
-            android:id="@+id/pallet_no"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/text_bg"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:textSize="@dimen/dp12"
-            android:textColor="@color/grey5"
-            android:textColorHint="@color/greyc"
-            android:hint="扫描托盘条码"
-            android:imeOptions="actionSearch"
-            android:lines="1"
-            android:singleLine="true"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/ln_delivery"
-        app:layout_constraintTop_toBottomOf="@+id/ln_pallet"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_margin="5dp"
-        android:orientation="horizontal"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="发货单条码"
-            android:textColor="@color/grey5"
-            android:textSize="@dimen/dp14"
-            android:gravity="center"
-            />
 
-        <EditText
-            android:id="@+id/delivery_no"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
-            android:background="@drawable/text_bg"
-            android:gravity="center_vertical"
-            android:hint="扫描发货单条码"
-            android:imeOptions="actionSearch"
-            android:lines="1"
-            android:paddingLeft="10dp"
-            android:singleLine="true"
-            android:textColor="@color/grey5"
-            android:textColorHint="@color/greyc"
-            android:textSize="@dimen/dp12" />
-    </LinearLayout>
+    <data>
 
-    <LinearLayout
-        android:id="@+id/ln_material"
-        app:layout_constraintTop_toBottomOf="@+id/ln_delivery"
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_margin="5dp"
-        android:orientation="horizontal"
-        >
-        <TextView
+        android:layout_height="match_parent">
+
+        <com.qmuiteam.qmui.widget.QMUITopBarLayout
+            android:id="@+id/topBar"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:qmui_topbar_left_back_drawable_id="@mipmap/back"
+            app:qmui_topbar_title_gravity="left_center" />
+
+        <LinearLayout
+            android:id="@+id/ln_pallet"
+            app:layout_constraintTop_toBottomOf="@+id/topBar"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:text="托盘"
+                android:textColor="@color/grey5"
+                android:textSize="@dimen/dp14"
+                android:gravity="center" />
+
+            <EditText
+                android:id="@+id/pallet_no"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/text_bg"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:textSize="@dimen/dp12"
+                android:textColor="@color/grey5"
+                android:textColorHint="@color/greyc"
+                android:hint="扫描托盘条码"
+                android:imeOptions="actionSearch"
+                android:lines="1"
+                android:singleLine="true" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ln_delivery"
+            app:layout_constraintTop_toBottomOf="@+id/ln_pallet"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="发货单条码"
+                android:textColor="@color/grey5"
+                android:textSize="@dimen/dp14"
+                android:gravity="center" />
+
+            <EditText
+                android:id="@+id/delivery_no"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:background="@drawable/text_bg"
+                android:gravity="center_vertical"
+                android:hint="扫描发货单条码"
+                android:imeOptions="actionSearch"
+                android:lines="1"
+                android:paddingLeft="10dp"
+                android:singleLine="true"
+                android:textColor="@color/grey5"
+                android:textColorHint="@color/greyc"
+                android:textSize="@dimen/dp12" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ln_material"
+            app:layout_constraintTop_toBottomOf="@+id/ln_delivery"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="物料条码"
+                android:textColor="@color/grey5"
+                android:textSize="@dimen/dp14"
+                android:gravity="center" />
+
+            <EditText
+                android:id="@+id/material_no"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/text_bg"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="1dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:textSize="@dimen/dp12"
+                android:textColor="@color/grey5"
+                android:textColorHint="@color/greyc"
+                android:hint="扫描物料条码"
+                android:imeOptions="actionSearch"
+                android:lines="1"
+                android:inputType="text" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ln_info"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/ln_material">
+
+            <TextView
+                android:id="@+id/tv_delivery_number"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:text="发运单数量：0"
+                android:gravity="center_vertical"
+                android:textSize="@dimen/dp16"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:text="机器总数："
+                android:gravity="center_vertical|right"
+                android:textSize="@dimen/dp16"
+                android:textColor="@color/black"
+                android:layout_marginLeft="20dp" />
+
+            <TextView
+                android:id="@+id/tv_number"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:gravity="center_vertical"
+                android:textSize="@dimen/dp16"
+                android:textColor="@color/black"
+                tools:text="40" />
+        </LinearLayout>
+
+        <com.qmuiteam.qmui.widget.QMUILoadingView
+            android:id="@+id/loading"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="物料条码"
-            android:textColor="@color/grey5"
-            android:textSize="@dimen/dp14"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_loading"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_loading"
+            app:qmui_loading_view_size="@dimen/dp18"
+            android:color="@color/grey5"
+            android:layout_marginStart="10dp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tv_loading"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            app:layout_constraintLeft_toRightOf="@+id/loading"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ln_info" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_loading"
+            app:layout_constraintBottom_toTopOf="@+id/tv_save"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="5dp" />
+
+        <TextView
+            android:id="@+id/tv_save"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/btn_login"
+            android:layout_marginLeft="-30dp"
+            android:layout_marginRight="-30dp"
+            android:text="保存"
             android:gravity="center"
-            />
-        <EditText
-            android:id="@+id/material_no"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/text_bg"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="1dp"
-            android:layout_marginBottom="1dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:textSize="@dimen/dp12"
-            android:textColor="@color/grey5"
-            android:textColorHint="@color/greyc"
-            android:hint="扫描物料条码"
-            android:imeOptions="actionSearch"
-            android:lines="1"
-            android:singleLine="true"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/ln_info"
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/ln_material"
-        >
-        <TextView
-            android:id="@+id/tv_delivery_number"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:text="发运单数量：0"
-            android:gravity="center_vertical"
-            android:textSize="@dimen/dp16"
-            android:textColor="@color/black"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:text="机器总数："
-            android:gravity="center_vertical|right"
-            android:textSize="@dimen/dp16"
-            android:textColor="@color/black"
-            android:layout_marginLeft="20dp"
-            />
-        <TextView
-            android:id="@+id/tv_number"
-            android:layout_width="wrap_content"
-            android:layout_height="25dp"
-            android:gravity="center_vertical"
-            android:textSize="@dimen/dp16"
-            android:textColor="@color/black"
-            tools:text="40"
-            />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_loading"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/ln_info"
-        />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_loading"
-        app:layout_constraintBottom_toTopOf="@+id/tv_save"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="5dp"
-        />
-    <TextView
-        android:id="@+id/tv_save"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/btn_login"
-        android:layout_marginLeft="-30dp"
-        android:layout_marginRight="-30dp"
-        android:text="保存"
-        android:gravity="center"
-        android:textSize="@dimen/dp14"
-        android:textColor="@color/white"
-        />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:textSize="@dimen/dp14"
+            android:textColor="@color/white" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
