--- a/app/src/main/res/layout/product_assemble_view.xml
+++ b/app/src/main/res/layout/product_assemble_view.xml
@@ -1,190 +1,197 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <com.qmuiteam.qmui.widget.QMUITopBarLayout
-        android:id="@+id/topBar"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:qmui_topbar_left_back_drawable_id="@mipmap/back"
-        />
-    <TextView
-        android:id="@+id/tvSet"
-        android:layout_width="48dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@+id/topBar"
-        app:layout_constraintBottom_toBottomOf="@+id/topBar"
-        app:layout_constraintRight_toRightOf="@+id/topBar"
-        android:text="设置"
-        android:gravity="center"
-        android:textSize="@dimen/dp14"
-        android:textColor="@color/grey5"
-        android:background="@drawable/item_bg"
-        />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/line"
-        android:background="@color/line"
-        app:layout_constraintBottom_toBottomOf="@+id/topBar"
-        />
-    <TextView
-        android:id="@+id/tvBatch"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/topBar"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/tvOrder"
-        tools:text="生产批次"
-        android:textSize="@dimen/dp12"
-        android:textColor="@color/grey5"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        />
-    <TextView
-        android:id="@+id/tvOrder"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/tvBatch"
-        app:layout_constraintLeft_toRightOf="@+id/tvBatch"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:text="生产订单"
-        android:textSize="@dimen/dp12"
-        android:textColor="@color/grey5"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        />
-    <TextView
-        android:id="@+id/materialNo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tvBatch"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/tvStation"
-        tools:text="物料编号"
-        android:textSize="@dimen/dp12"
-        android:textColor="@color/grey5"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        />
 
-    <TextView
-        android:id="@+id/tvStation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/materialNo"
-        app:layout_constraintLeft_toRightOf="@+id/materialNo"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:text="站点名称"
-        android:textSize="@dimen/dp12"
-        android:textColor="@color/grey5"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        />
-    <TextView
-        android:id="@+id/tvLine"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/materialNo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:text="线别名称"
-        android:textSize="@dimen/dp12"
-        android:textColor="@color/grey5"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        />
-    <TextView
-        android:id="@+id/materialDesc"
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tvLine"
-        tools:text="物料描述"
-        android:textSize="@dimen/dp12"
-        android:textColor="@color/grey5"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="5dp"
-        />
-    <TextView
-        android:id="@+id/count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/materialDesc"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:text="批次总量：50"
-        android:layout_marginTop="5dp"
-        android:layout_marginStart="10dp"
-        android:textSize="@dimen/dp12"
-        android:textColor="@color/grey5"
-        />
-    <TextView
-        android:id="@+id/binded"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/count"
-        app:layout_constraintLeft_toRightOf="@+id/count"
-        tools:text="已扫数量：46"
-        android:layout_marginStart="10dp"
-        android:textSize="@dimen/dp12"
-        android:textColor="@color/grey5"
-        />
-    <TextView
-        android:id="@+id/unBind"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/count"
-        app:layout_constraintLeft_toRightOf="@+id/binded"
-        tools:text="待扫数量：4"
-        android:layout_marginStart="10dp"
-        android:textSize="@dimen/dp12"
-        android:textColor="@color/grey5"
-        />
-    <EditText
-        android:id="@+id/editSnScan"
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/unBind"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="5dp"
-        android:background="@drawable/text_bg"
-        android:textSize="@dimen/dp14"
-        android:textColor="@color/grey5"
-        android:textColorHint="@color/greyc"
-        android:hint="扫描产品序列号"
-        android:paddingStart="10dp"
-        android:imeOptions="actionSend"
-        android:inputType="text"
-        android:lines="1"
-        />
-    <com.scwang.smartrefresh.layout.SmartRefreshLayout
-        android:id="@+id/refresh"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/editSnScan"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="5dp"
-        >
-        <FrameLayout
+        android:layout_height="match_parent"
+        android:background="@color/white">
+
+        <com.qmuiteam.qmui.widget.QMUITopBarLayout
+            android:id="@+id/topBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler"
+            android:layout_height="48dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:qmui_topbar_left_back_drawable_id="@mipmap/back" />
+
+        <TextView
+            android:id="@+id/tvSet"
+            android:layout_width="48dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@+id/topBar"
+            app:layout_constraintBottom_toBottomOf="@+id/topBar"
+            app:layout_constraintRight_toRightOf="@+id/topBar"
+            android:text="设置"
+            android:gravity="center"
+            android:textSize="@dimen/dp14"
+            android:textColor="@color/grey5"
+            android:background="@drawable/item_bg" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/line"
+            android:background="@color/line"
+            app:layout_constraintBottom_toBottomOf="@+id/topBar" />
+
+        <TextView
+            android:id="@+id/tvBatch"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/topBar"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/tvOrder"
+            tools:text="生产批次"
+            android:textSize="@dimen/dp12"
+            android:textColor="@color/grey5"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp" />
+
+        <TextView
+            android:id="@+id/tvOrder"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@+id/tvBatch"
+            app:layout_constraintLeft_toRightOf="@+id/tvBatch"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:text="生产订单"
+            android:textSize="@dimen/dp12"
+            android:textColor="@color/grey5"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp" />
+
+        <TextView
+            android:id="@+id/materialNo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/tvBatch"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/tvStation"
+            tools:text="物料编号"
+            android:textSize="@dimen/dp12"
+            android:textColor="@color/grey5"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp" />
+
+        <TextView
+            android:id="@+id/tvStation"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@+id/materialNo"
+            app:layout_constraintLeft_toRightOf="@+id/materialNo"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:text="站点名称"
+            android:textSize="@dimen/dp12"
+            android:textColor="@color/grey5"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp" />
+
+        <TextView
+            android:id="@+id/tvLine"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/materialNo"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:text="线别名称"
+            android:textSize="@dimen/dp12"
+            android:textColor="@color/grey5"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp" />
+
+        <TextView
+            android:id="@+id/materialDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/tvLine"
+            tools:text="物料描述"
+            android:textSize="@dimen/dp12"
+            android:textColor="@color/grey5"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="5dp" />
+
+        <TextView
+            android:id="@+id/count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/materialDesc"
+            app:layout_constraintLeft_toLeftOf="parent"
+            tools:text="批次总量：50"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"
+            android:textSize="@dimen/dp12"
+            android:textColor="@color/grey5" />
+
+        <TextView
+            android:id="@+id/binded"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@+id/count"
+            app:layout_constraintLeft_toRightOf="@+id/count"
+            tools:text="已扫数量：46"
+            android:layout_marginStart="10dp"
+            android:textSize="@dimen/dp12"
+            android:textColor="@color/grey5" />
+
+        <TextView
+            android:id="@+id/unBind"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@+id/count"
+            app:layout_constraintLeft_toRightOf="@+id/binded"
+            tools:text="待扫数量：4"
+            android:layout_marginStart="10dp"
+            android:textSize="@dimen/dp12"
+            android:textColor="@color/grey5" />
+
+        <EditText
+            android:id="@+id/editSnScan"
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            app:layout_constraintTop_toBottomOf="@+id/unBind"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/text_bg"
+            android:textSize="@dimen/dp14"
+            android:textColor="@color/grey5"
+            android:textColorHint="@color/greyc"
+            android:hint="扫描产品序列号"
+            android:paddingStart="10dp"
+            android:imeOptions="actionSend"
+            android:inputType="text"
+            android:lines="1" />
+
+        <com.scwang.smartrefresh.layout.SmartRefreshLayout
+            android:id="@+id/refresh"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/editSnScan"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="5dp">
+
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:orientation="vertical"
-                />
-            <com.qmuiteam.qmui.widget.QMUIEmptyView
-                android:id="@+id/empty_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white"
-                />
-        </FrameLayout>
-    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:orientation="vertical" />
+
+                <com.qmuiteam.qmui.widget.QMUIEmptyView
+                    android:id="@+id/empty_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+            </FrameLayout>
+        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
